# s3lfs

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PRE_COMMIT_SETUP.md  README.md  pyproject.toml  setup.cfg  test_cli_coverage.py  test_cli_error_handling.py  test_cli_integration.py  test_coverage_gaps.py  test_error_handling_and_edge_cases.py  test_git_root_coverage.py  test_manifest_not_exists_coverage.py  test_s3lfs.py
.github/workflows/: ci.yaml
s3lfs/: __init__.py  cli.py  core.py
